--- a/ödev1/index.html
+++ b/ödev1/index.html
@@ -15,6 +15,8 @@
     <!--İlk başlığımı <h1> etiketiyle yaptım.Hakkımda başlığını ise <h3> etiketiyle kullanarak yapmayı tercih ettim.Bunun yanında 
      <p> etiketini kullanarak kendimi açıkladığım bir paragraf yazdım. -->
 
+
+    <h2>Test</h2>
     
 </body>
 </html>
