--- a/ödev1/index.html
+++ b/ödev1/index.html
@@ -15,8 +15,36 @@
     <!--İlk başlığımı <h1> etiketiyle yaptım.Hakkımda başlığını ise <h3> etiketiyle kullanarak yapmayı tercih ettim.Bunun yanında 
      <p> etiketini kullanarak kendimi açıkladığım bir paragraf yazdım. -->
 
+        <h1>Hobilerim</h1>
 
-    <h2>Test</h2>
-    
+        <h4>Filmler</h4>
+        <ul>
+            <a href="https://www.imdb.com/title/tt0118971/">
+                <li>Şeytanın Avukatı</li>
+             </a>
+            <li>Görünmeyen Misafir</li>
+            <li>Fall</li>
+        </ul>
+
+        <h4>Kitaplar</h4>
+        <ul>
+            <li>Kürk Mantolu Madonna</li>
+            <li>Kuyucaklı Yusuf</li>
+            <li>Sergüzeşt</li>
+        </ul>
+        
+        <h4>Diziler</h4>
+        <ul>
+            <li>Rick and Morty</li>
+            <li>How ı met your mother</li>
+            <li>Bataklık</li>
+        </ul>
+
+        <h2>Sevdiğim dizilerden bir tanesi...</h2>
+        <h3>Rick and Morty</h3>
+    <img src="/komedi dizisi/rickandmorty.jpg" alt="rickandmorty" width="%70" height="400px">
+    <p>Justin Roiland ve Dan Harmon tarafından Adult Swim için yaratılan bir yetişkin animasyon televizyon dizisidir. 
+        Dizi, kendi zamanlarını aile hayatı ve boyutlar arası yolculuk arasında bölüştürmüş alkolik bilim insanı Rick ve onun torunu Morty'nin maceralarını anlatır.</p>
+
 </body>
 </html>
