--- a/ödev1/index.html
+++ b/ödev1/index.html
@@ -44,7 +44,7 @@
         <h3>Rick and Morty</h3>
     <img src="/komedi dizisi/rickandmorty.jpg" alt="rickandmorty" width="%70" height="400px">
     <p>Justin Roiland ve Dan Harmon tarafından Adult Swim için yaratılan bir yetişkin animasyon televizyon dizisidir. 
-        Dizi, kendi zamanlarını aile hayatı ve boyutlar arası yolculuk arasında bölüştürmüş alkolik bilim insanı Rick ve onun torunu Morty'nin maceralarını anlatır.</p>
+        Dizi, kendi zamanlarını aile hayatı ve boyutlar arası yolculuk arasında bölüştürmüş alkolik bilim insanı Rick ve onun torunu Morty'nin maceralarını güzelce anlatır.</p>
 
 </body>
 </html>
